--- a/sekizuisinkeitonousinkei.html
+++ b/sekizuisinkeitonousinkei.html
@@ -241,7 +241,7 @@
     "殿部"
   ],
   "answer": 0,
-  "explanation": "横隔神経はC3〜C5から出ており、横隔膜の運動を支配しています。これにより呼吸を調整します。"
+  "explanation": "横隔神経はC3〜C5から出ており、横隔膜の運動を支配し、呼吸運動に関与します。"
 },
 {
   "question": "坐骨神経が分岐する部位は次のどれですか？",
@@ -252,7 +252,7 @@
     "肩甲骨"
   ],
   "answer": 0,
-  "explanation": "坐骨神経は人体で最も大きな神経で、膝窩で脛骨神経と腓骨神経に分かれます。これにより下肢の運動と感覚を支配します。"
+  "explanation": "坐骨神経は人体で最も大きな神経で、膝窩部で脛骨神経と腓骨神経に分かれます。これにより下肢の運動と感覚を支配します。"
 },
 {
   "question": "腕神経叢が支配する範囲として正しいのはどれですか？",
@@ -329,7 +329,7 @@
     "頸静脈孔"
   ],
   "answer": 2,
-  "explanation": "視神経は、眼球の後極から出て視神経管を通り、脳に到達します。"
+  "explanation": "視神経は、眼球の後極から出て眼動脈と共に視神経管を通り、脳に到達します。"
 },
 {
   "question": "動眼神経（Ⅲ）が支配する筋は次のうちどれですか？",
@@ -505,7 +505,7 @@
     "汗腺"
   ],
   "answer": 1,
-  "explanation": "顔面神経は、顎下腺と舌下腺の分泌を調節します。"
+  "explanation": "顔面神経は、顎下腺と舌下腺および涙腺の分泌を調節します。"
 },
 {
   "question": "顔面神経麻痺の主な症状は次のどれですか？",
