--- a/sekizuisinkeitonousinkei.html
+++ b/sekizuisinkeitonousinkei.html
@@ -505,7 +505,7 @@
     "汗腺"
   ],
   "answer": 1,
-  "explanation": "顔面神経は、顎下腺と舌下腺および涙腺の分泌を調節します。"
+  "explanation": "顔面神経は、顎下腺と舌下腺および涙腺の分泌を調節します。耳下腺は舌咽神経が支配"
 },
 {
   "question": "顔面神経麻痺の主な症状は次のどれですか？",
