--- a/nounotougou.html
+++ b/nounotougou.html
@@ -334,13 +334,13 @@
 {
   "question": "短期記憶を司るのは次のどれですか？",
   "options": [
-    "海馬",
+    "前頭前野",
     "小脳",
     "延髄",
     "中脳"
   ],
   "answer": 0,
-  "explanation": "海馬は短期記憶の保持や長期記憶への移行に重要な役割を果たします。脳の他の部分と連携して記憶のプロセスを担っています。"
+  "explanation": "前頭前野は短期記憶の保持に重要な役割を果たします。長期記憶は海馬がにないます。"
 },
 {
   "question": "次のうち、成長ホルモンの分泌が増加する時間帯はどれですか？",
