--- a/dendouro.html
+++ b/dendouro.html
@@ -588,7 +588,7 @@ function loadQuestion() {
         attendanceLink.style.display = 'block';
         attendanceLink.innerHTML = `
           <p>おめでとうございます！80%以上の正答率です。</p>
-          <a href="https://forms.gle/9YBLTaRdjjmTEjAh9" target="_blank">出席確認フォームに回答する</a>
+          <a href="https://forms.gle/6cWpmGUxhDsvZQC3A" target="_blank">出席確認フォームに回答する</a>
         `;
       }
     }
