--- a/me.html
+++ b/me.html
@@ -488,7 +488,7 @@ function loadQuestion() {
         attendanceLink.style.display = 'block';
         attendanceLink.innerHTML = `
           <p>おめでとうございます！80%以上の正答率です。</p>
-          <a href="https://forms.gle/hSSftrQXqMgfWTodA" target="_blank">出席確認フォームに回答する</a>
+          <a href="https://forms.gle/TgN3hFvntvhX7kax7" target="_blank">出席確認フォームに回答する</a>
         `;
       }
     }
