--- a/me.html
+++ b/me.html
@@ -206,13 +206,13 @@
     "explanation": "眼球の外層は強靭なコラーゲン線維からなる強膜で、眼球の約5/6を占めています"
   },
   {
-    "question": "光の屈折を調整する役割を持つのはどれか？",
+    "question": "光の屈折を調整しピントを合わせる役割を持つのはどれか？",
     "options": ["水晶体", "角膜", "網膜", "硝子体"],
     "answer": 0,
     "explanation": "水晶体は遠近調節を行い、光を屈折させて網膜上に像を結ぶ役割を果たしています"
   },
   {
-    "question": "瞳孔の大きさを調節する神経はどれか？",
+    "question": "瞳孔の大きさを縮小させる神経はどれか？",
     "options": ["交感神経", "副交感神経", "視神経", "動眼神経"],
     "answer": 1,
     "explanation": "副交感神経は瞳孔括約筋を収縮させ、瞳孔の大きさを調節します"
