--- a/me.html
+++ b/me.html
@@ -213,9 +213,9 @@
   },
   {
     "question": "瞳孔の大きさを縮小させる神経はどれか？",
-    "options": ["交感神経", "副交感神経", "視神経", "動眼神経"],
+    "options": ["交感神経", "副交感神経", "視神経", "外転神経"],
     "answer": 1,
-    "explanation": "副交感神経は瞳孔括約筋を収縮させ、瞳孔の大きさを調節します"
+    "explanation": "副交感神経は瞳孔括約筋を収縮させ、瞳孔の大きさを縮小させます"
   },
   {
     "question": "角膜の表面を覆っているのはどれか？",
