--- a/kankakuki.html
+++ b/kankakuki.html
@@ -296,7 +296,7 @@
     "explanation": "耳管（ユースタキオ管）は、鼓室と咽頭を繋ぐ管で、鼓室内の気圧を調整する役割を担っています。耳管が開閉することで、鼓膜が正常に振動できるようになっています。"
   },
   {
-    "question": "舌の味覚を支配する神経はどれか。",
+    "question": "舌の感覚（味覚および一般感覚）を支配する主要な神経はどれか。",
     "options": ["三叉神経、顔面神経、舌咽神経", "三叉神経、迷走神経、副神経", "顔面神経、舌咽神経、迷走神経", "舌咽神経、迷走神経、副神経"],
     "answer": 0,
     "explanation": "舌前2/3の味覚は顔面神経、舌後1/3の味覚は舌咽神経が支配しています。また、舌前2/3の触覚は三叉神経が支配しています。"
