--- a/kankakuki.html
+++ b/kankakuki.html
@@ -315,7 +315,7 @@
   },
 {
     "question": "組織損傷時に産生され、発痛作用を持つ物質はどれか",
-    "options": ["ブラジキニン", "ヒスタミン", "セロトニン", "アセチルコリン"],
+    "options": ["ブラジキニン", "GABA", "グリシン", "エンドルフィン"],
     "answer": 0,
     "explanation": "ブラジキニンは、組織損傷時に産生される生理活性物質で、発痛作用や炎症反応を引き起こします。"
   },
