--- a/hihunokouzou.html
+++ b/hihunokouzou.html
@@ -458,7 +458,7 @@ function loadQuestion() {
         attendanceLink.style.display = 'block';
         attendanceLink.innerHTML = `
           <p>おめでとうございます！80%以上の正答率です。</p>
-          <a href="https://forms.gle/iFssAVraiM1F7ug98"_blank">出席確認フォームに回答する</a>
+          <a href="https://forms.gle/5YYFU42bBGsoxMRF6"_blank">出席確認フォームに回答する</a>
         `;
       }
     }
