--- a/kankakuki.html
+++ b/kankakuki.html
@@ -206,8 +206,8 @@
     "explanation": "鼓膜は外耳と中耳を隔てる薄い膜で、音波を受けて振動することで、音の情報を中耳に伝えます。"
   },
   {
-    "question": "中耳にある耳小骨を構成する骨はどれか。",
-    "options": ["砧骨、鐙骨、槌骨", "槌骨、砧骨、鐙骨", "鐙骨、槌骨、砧骨", "槌骨、鐙骨、砧骨"],
+    "question": "中耳にある耳小骨を構成する骨を外側から順番に並べるとどれか。",
+    "options": ["キヌタ骨、アブミ骨、ツチ骨", "ツチ骨、キヌタ骨、アブミ骨", "アブミ骨、ツチ骨、キヌタ骨", "ツチ骨、アブミ骨、キヌタ骨"],
     "answer": 1,
     "explanation": "中耳には、鼓膜の振動を増幅して内耳に伝える３つの小さな骨、槌骨、砧骨、鐙骨があります。"
   },
